# learn_python_project

./: .gitignore  README.md
blog_api/: README.md  alembic.ini  pyproject.toml
blog_api/alembic/: env.py
blog_api/alembic/versions/: 59b1523b491d_init.py
blog_api/src/blog_api/: __init__.py  config.py  database.py  dependencies.py  main.py  templating.py
blog_api/src/blog_api/models/: __init__.py  category.py  comment.py  post.py  tag.py  user.py
blog_api/src/blog_api/routers/: auth.py  categories.py  comments.py  pages.py  posts.py
blog_api/src/blog_api/schemas/: comment.py  post.py  user.py
blog_api/src/blog_api/services/: auth.py
blog_api/static/css/: style.css
blog_api/templates/: base.html  login.html  post_detail.html  post_form.html  post_list.html  register.html
blog_api/tests/: conftest.py  test_auth.py  test_comments.py  test_posts.py
file_organizer/: README.md  pyproject.toml
file_organizer/src/file_organizer/: __init__.py  __main__.py  cli.py  config.py  organizer.py  rules.py
file_organizer/tests/: test_config.py  test_organizer.py  test_rules.py  test_yaml.py
web_scraper/: README.md  pyproject.toml
web_scraper/output/: books.csv
web_scraper/src/web_scraper/: __init__.py  __main__.py  cli.py  database.py  export.py  models.py  pipeline.py  reports.py  scraper.py
web_scraper/tests/: test_database.py  test_reports.py  test_scraper.py  test_scraper_bt_http_bs.py
