[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer"
version = "0.1.0"
description = "A CLI tool to organize files by type"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
file-organizer = "file_organizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
