[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-scraper"
version = "0.1.0"
description = "Scrape book data and generate visualizations"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
web-scraper = "web_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
